Fix weird form overflow

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -53,6 +53,10 @@
   margin-top: $margin-small;
 }
 
+.form {
+  display: flex;
+}
+
 .textarea {
   width: 100%;
   max-width: 100%;
